Add simple healthz endpoint
According to #8.
