# pkg/models/health_check_results.go
@@ -1,0 +1,88 @@
+// Copyright 2018 Bloomberg Finance L.P.
+//
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// HealthCheckResults health check results
+// swagger:model HealthCheckResults
+type HealthCheckResults struct {
+
+	// o k
+	OK *bool `json:"OK,omitempty"`
+
+	// duration ns
+	DurationNs int64 `json:"duration-ns,omitempty"`
+
+	// generated at
+	// Format: date-time
+	GeneratedAt strfmt.DateTime `json:"generated-at,omitempty"`
+}
+
+// Validate validates this health check results
+func (m *HealthCheckResults) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateGeneratedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *HealthCheckResults) validateGeneratedAt(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.GeneratedAt) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("generated-at", "body", "date-time", m.GeneratedAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *HealthCheckResults) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *HealthCheckResults) UnmarshalBinary(b []byte) error {
+	var res HealthCheckResults
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
