# swagger.yml
@@ -83,6 +83,18 @@ definitions:
         type: object
         additionalProperties:
           $ref: '#/definitions/CheckAllPodResult'
+  HealthCheckResults:
+    type: object
+    properties:
+      OK:
+        type: boolean
+        default: false
+      generated-at:
+        type: string
+        format: date-time
+      duration-ns:
+        type: integer
+        format: int64
 paths:
   /ping:
     get:
@@ -120,3 +132,23 @@ paths:
           description: Success, return response 
           schema:
             $ref: '#/definitions/CheckAllResults'
+  /healthz:
+    get:
+      description:  The healthcheck endpoint provides detailed information about
+                    the health of a web service. If each of the components required
+                    by the service are healthy, then the service is considered healthy
+                    and will return a 200 OK response. If any of the components needed
+                    by the service are unhealthy, then a 503 Service Unavailable
+                    response will be provided.
+      produces:
+        - application/json
+      operationId: healthz
+      responses:
+        200:
+          description: Health check report
+          schema:
+            $ref: '#/definitions/HealthCheckResults'
+        503:
+          description: Unhealthy service
+          schema:
+            $ref: '#/definitions/HealthCheckResults'
